# dbuf

./: CMakeLists.txt  Config.cmake.in  configure.ac
include/: libdbuf.h
src/: Makefile.am  libdbuf.c  libdbuf.h
test/: Makefile.am  test1.c
